--- a/Desktop/pinteresting/Gemfile
+++ b/Desktop/pinteresting/Gemfile
@@ -1,17 +1,21 @@
 source 'https://rubygems.org'
-#ruby '2.2.1'
+ruby '2.2.1'
 
 gem 'rails', '4.2.3'
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.1.0'
 gem 'jquery-rails'
+gem 'jquery-turbolinks'
 gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'bootstrap-sass'
 gem 'devise', '~> 3.5.1'
 gem 'paperclip', github: 'thoughtbot/paperclip'
+gem 'aws-sdk', '~> 2'
+gem 'nokogiri','~>1.6.0'
+gem 'masonry-rails', '~> 0.2.0'
 
 group :development, :test do
   gem 'sqlite3'
