--- a/Desktop/pinteresting/Gemfile
+++ b/Desktop/pinteresting/Gemfile
@@ -16,6 +16,8 @@ gem 'paperclip', github: 'thoughtbot/paperclip'
 gem 'aws-sdk', '~> 2'
 gem 'nokogiri','~>1.6.0'
 gem 'masonry-rails', '~> 0.2.0'
+gem 'will_paginate', '~> 3.0.6'
+gem 'will_paginate-bootstrap'
 
 group :development, :test do
   gem 'sqlite3'
